2009-05-19  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Roben.

        Make PrettyPatch understand quoted filenames in git diffs.
        https://bugs.webkit.org/show_bug.cgi?id=25881

        * PrettyPatch/PrettyPatch.rb:

2009-05-15  Simon Fraser  <simon.fraser@apple.com>

        Carrying forwards Darin Adler's rubber stamp
        
        Make the comment field wider too.

        * skins/custom/global.css:

2009-05-14  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Darin Adler
        
        Make the URL, Summary and Keyword fields wider to mitigate the
        effects of https://bugs.webkit.org/show_bug.cgi?id=25566 and make
        things generally better.

        * skins/custom/global.css:
        * template/en/custom/bug/edit.html.tmpl:

2008-11-10  Darin Adler  <darin@apple.com>

        - fix more of https://bugs.webkit.org/show_bug.cgi?id=21400
          "Edit" links for patches in comments, review queue, review emails
          should be replaced by "Review Patch" links

        * globals.pl: Fix cases that are automatically generated, such as links
        in comments in bugs.

        * template/en/custom/attachment/created.html.tmpl: Fix the link on the
        "I just created an attachment" page.

        * template/en/custom/request/queue.html.tmpl: Fix the link in the queue
        page.

2008-11-10  Darin Adler  <darin@apple.com>

        * template/en/default/request/queue.html.tmpl: Use review links instead
        of edit links in the review queue.

2008-11-10  Darin Adler  <darin@apple.com>

        * template/en/custom/request/email.txt.tmpl: Send review links instead
        of edit links when flags are set on a bug.

2008-10-27  Darin Adler  <darin@apple.com>

        * template/en/custom/attachment/reviewform.html.tmpl: Leave out the
        comment if it's untouched.

2008-10-23  Adam Roben  <aroben@apple.com>

        Fix Bug 21401: Comments field on "Review Patch" page should be